<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numberA"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/number_A_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numberB"
        android:layout_width="180dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/number_B_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operatorDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math_operator"
        app:layout_constraintBottom_toBottomOf="@+id/numberA"
        app:layout_constraintEnd_toStartOf="@+id/numberB"
        app:layout_constraintStart_toEndOf="@+id/numberA"
        app:layout_constraintTop_toTopOf="@+id/numberA" />

    <TextView
        android:id="@+id/answerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/answer_initial"
        app:layout_constraintStart_toEndOf="@+id/equalSign"
        app:layout_constraintTop_toTopOf="@+id/equalSign" />

    <TextView
        android:id="@+id/equalSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/equal_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberA" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_calculate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operatorSelection" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_reset_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

    <RadioGroup
        android:id="@+id/operatorSelection"
        android:layout_width="322dp"
        android:layout_height="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/answerDisplay">

        <RadioButton
            android:id="@+id/operatorAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_add_text" />

        <RadioButton
            android:id="@+id/operatorSubtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_subtract_text" />

        <RadioButton
            android:id="@+id/operatorMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_multiply_text" />

        <RadioButton
            android:id="@+id/operatorDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_divide_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/operator_select_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerDisplay" />
</androidx.constraintlayout.widget.ConstraintLayout>